# font-min

./: .cnb.yml  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
backend/: __init__.py  file_manager.py  font_compressor.py  font_converter.py  routes.py
web/: index.html
web/static/: data.js  index.css  utils.js
