[project]
name = "dfont"
version = "1.0.0"
description = "字体转换和压缩工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.53.0",
    "brotli>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "apscheduler>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
